# foliage_rendering

./: CMakeLists.txt  README.md  imgui.ini  main.cpp
executable/: imgui.ini
executable/resources/shaders/: default.vert  gpu_instancing.frag  white.vert
include/: chunk.hpp  mesh.hpp  renderer.hpp  scene.hpp  shader.hpp  texture.hpp  utility.hpp  window.hpp
resources/: grass_model.txt  grass_model_low_poly.txt
resources/models/: grass_model.txt  grass_model_low_poly.txt
resources/screenshots/: desktop.ini
resources/shaders/: default.frag  default.vert  default_fragment.glsl  default_vertex.glsl  displacement.comp  displacement.glsl  field_generator.comp  field_generator.glsl  flow_field.glsl  gpu_instancing.frag  gpu_instancing.glsl  gpu_instancing.vert  grass_generation.glsl  post_processing.glsl  screen_vertex.glsl  sine_map.comp  sine_map.glsl  single_color_fragment.glsl  single_color_vertex.glsl
src/: chunk.cpp  mesh.cpp  renderer.cpp  scene.cpp  shader.cpp  texture.cpp  window.cpp
